# django-allauth-wso2is

./: MANIFEST.in  README.rst  setup.cfg
allauth_wso2is/: import_ca_cert.py  provider.py  tests.py  urls.py  utils.py  views.py
docs/: index.rst
