[metadata]
name = django-allauth-wso2is
version = 0.0.1
description = Client Connector for wso2 (oauth2-oidc)
long_description = file: README.rst
url = https://www.example.com/
author = Your Name
author_email = yourname@example.com
license = MIT  # Example license
classifiers =
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
python_requires = >=3.8
install_requires =
	Django>=3.0
packages = find: